--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -4,27 +4,29 @@
 
 .navbar
 {
-    border:0;
-	margin-bottom:0;
-    opacity:0.99;
-    background-color: transparent;
+    background-color: $teal;
+    height:120%;
+//    border:0;
+//    margin-bottom:0;
+//    opacity:0.99;
+//    background-color: transparent;
 }
 
-.menu-nav
-{
-	float:left;
-	margin:0;
-}
+//.menu-nav
+//{
+//    float:left;
+//    margin:0;
+//}
 
 .navbar-brand small
 {
 	font-size:12px;
 }
 
-#icon-nav
-{
-	margin-right:-15px;
-}
+//#icon-nav
+//{
+//    margin-right:-15px;
+//}
 
 @media (min-width: 768px)
 {
@@ -34,15 +36,15 @@
 	}
 }
 
-.navbar > .container
-{
-	background-color: #223839;
-}
+//.navbar > .container
+//{
+//    background-color: #223839;
+//}
 
-.navbar-header a, .navbar-default .navbar-nav > li > a
-{
-	color:white !important;
-}
+//.navbar-header a, .navbar-default .navbar-nav > li > a
+//{
+//    color:white !important;
+//}
 
 //.navbar-default .navbar-nav > li > a {
 //
@@ -53,28 +55,40 @@
 	width:12px;
 }
 
-.navbar .dropdown-menu > li > a
+//.navbar .dropdown-menu > li > a
+//{
+//    padding-top:0.4em;
+//    padding-bottom:0.4em;
+//}
+
+.navbar-expand-lg .navbar-nav .nav-link, .navbar-expand-lg .navbar-nav .navbar-text
 {
-	padding-top:0.4em;
-	padding-bottom:0.4em;
+    padding-left:1rem;
+    padding-right:1rem;
 }
 
-#icon-nav > li > a
+.navbar .dropdown-item
 {
-    padding: 15px 10px;
+    padding-top:0.4em;
+    padding-bottom:0.4em;
 }
 
-.navbar-header
-{
+//#icon-nav > li > a
+//{
+//    padding: 15px 10px;
+//}
+
+//.navbar-header
+//{
 //    float: left;
-}
+//}
 
-.navbar-nav.navbar-right
-{
-    float: right !important;
-    margin: 0;
+//.navbar-nav.navbar-right
+//{
+//    float: right !important;
+//    margin: 0;
 //    margin-right: -15px;
-}
+//}
 
 @media (max-width: 767px)
 {
@@ -106,20 +120,20 @@
 	}
 }
 
-.navbar-collapse:after
-{
-    clear:none;
-}
+//.navbar-collapse:after
+//{
+//    clear:none;
+//}
 
-.navbar-right > .navbar-text:last-child
-{
-	margin-right:0;
-}
+//.navbar-right > .navbar-text:last-child
+//{
+//    margin-right:0;
+//}
 
-.navbar .navbar-text
-{
-	line-height:20px;
-}
+//.navbar .navbar-text
+//{
+//    line-height:20px;
+//}
 
 .navbar .label // schedule label next to site name
 {
@@ -149,19 +163,19 @@
 
 .navbar .dropdown-menu
 {
-	border:none;
-	border-radius:0;
+    border:none;
+    border-radius:0;
     box-shadow: 10px 10px black;
-    
-	opacity:0.98;
-	padding-top:0.25em;
-	max-height:600px;
-	overflow-y:scroll;
+//
+//    opacity:0.98;
+//    padding-top:0.25em;
+    max-height:600px;
+    overflow-y:scroll;
 }
 
 #menu-nav .dropdown-menu
 {
-	min-width:200px;
+    min-width:200px;
 }
 
 .navbar #ama-nav .dropdown-menu
@@ -188,10 +202,10 @@ i.fa
 // PRIMARY NAVBAR STYLES
 //
 
-#main-nav
-{
-    z-index:10;
-}
+//#main-nav
+//{
+//    z-index:10;
+//}
 
 //
 // SIDEBAR TOGGLE
