--- a/app/views/layouts/_sections.html.erb
+++ b/app/views/layouts/_sections.html.erb
@@ -1,14 +1,14 @@
 <% for section in @sections_in_navbar %>
 
-<li class="dropdown hidden-xs">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+<li class="nav-item dropdown hidden-xs">
+	<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 		<%= section.title %> <span class='caret'></span>
 	</a>
-	<ul class="dropdown-menu">
+	<div class="dropdown-menu">
 		<% for page in section.pages %>
-		<li><%= link_to (page.title).html_safe, "/#{section.slug}/#{page.slug}", class: (page.public ? '' : 'bg-warning') %></li>
+		<%= link_to (page.title).html_safe, "/#{section.slug}/#{page.slug}", class: 'dropdown-item ' + (page.public ? '' : 'bg-warning') %>
 		<% end %>
-	</ul>
+	</div>
 </li>
 
 <% end %>
