--- a/app/views/profile/_edit.html.erb
+++ b/app/views/profile/_edit.html.erb
@@ -1,47 +1,29 @@
-<%= form_tag '/profile/save', class:'form-horizontal profile-form' do |f| %>
+<%= form_tag '/profile/save', class:'profisle-form' do |f| %>
 
-<div class="modal-dialog">
-	<div class="modal-content">
-		<div class="modal-header">
-			<h2 class="modal-title">Please register</h2>
-			<p>You need to do this before you can submit your problem sets.</p>
-		</div>
-		<div class="modal-body" style="padding:2em;">
-
-			<div class="form-group">
-				<label class="col-sm-4 control-label" for="user_name">First and last name</label>
-				<div class="col-sm-8">
-					<%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-4 control-label" for="user_mail">E-mail</label>
-				<div class="col-sm-8">
-					<%= text_field_tag('user[mail]', (current_user.mail if current_user), required:true, class:'form-control') %>
-				</div>
-			</div>
-			
-			<% if Schedule.any? %>
-			<div class="form-group">
-				<label class="col-sm-4 control-label" for="user_mail">Your schedule</label>
-				<div class="col-sm-8">
-					<% Schedule.where(self_register: true).each do |schedule| %>
-					<div class="radio">
-						<label>
-							<input type="radio" name="user[schedule_id]" required id="optionsRadios1" value="<%= schedule.id %>" style="margin-top:0;"> <%= schedule.description || schedule.name %>
-						</label>
-					</div>
-					<% end %>
-				</div>
-			</div>
-			<% end %>
-		</div>
-		<div class="modal-footer">
-			<%= link_to 'Logout', '/profile/logout', class: 'btn btn-default' %>
-			<%= submit_tag 'Create Profile', class:'btn btn-primary' %>
-		</div>
-	</div>
+<div class="form-group">
+	<label for="user_name">First and last name</label>
+	<%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
 </div>
+<div class="form-group">
+	<label for="user_mail">E-mail</label>
+	<%= text_field_tag('user[mail]', (current_user.mail if current_user), required:true, class:'form-control') %>
+</div>
+			
+<% if Schedule.any? %>
+<div class="form-group">
+	<label>Your schedule</label>
 
+	<% Schedule.where(self_register: true).each do |schedule| %>
+	<div class="form-check">
+		<input type="radio" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>">
+		<label for="optionsRadios<%= schedule.id %>">
+			<%= schedule.description || schedule.name %>
+		</label>
+	</div>
+	<% end %>
+</div>
+<% end %>
+
+<p><%= submit_tag 'Create Profile', class:'btn btn-primary btn-lg' %></p>
 
 <% end %>
